# csound-vst3-opcodes

./: .gitmodules  OpcodeBaseAC.hpp  README.md  clean-build-bash  clean-build-linux.bash  clean-build-macos.bash  clean-build-windows-debug.bash  clean-build-windows.bash  codesign-check.bash  make-csound.bash  update-submodules.bash  zip-linux.bash  zip-macos.bash  zip-windows-debug.bash  zip-windows.bash
.github/workflows/: build-and-release.yml  build_and_release.yml  build_and_upload.yml  simple.yml
csound-vst3/: CMakeLists.txt
csound-vst3/vst3-opcodes/: CMakeLists.txt  CollidingComb.csd  Dexed-Chroma.vstpreset  Dexed.csd  Odin2.csd  Odin2.vstpreset  README.md  Surge.csd  pianoteq_macos_test.csd  test_loader.csd  vst3-opcodes-dexed.csd  vst3-opcodes-minimal.csd  vst3-opcodes-nopresets.csd  vst3-opcodes-program-change.csd  vst3-opcodes-test-linux.csd  vst3-opcodes-test-macos.csd  vst3-opcodes-test-windows-debug.csd  vst3-opcodes-test-windows.csd  vst3-opcodes-test.csd  vst3-opcodes.cpp  vst3-opcodes.csd
csound-vst3/vst3-opcodes/cmake/Modules/: csound-config.cmake
examples/: CollidingComb.csd  CollidingCombSynth-1.vstpreset  CollidingCombSynth.vstpreset  Dexed.csd  Odin2-1.vstpreset  Odin2-2.vstpreset  Odin2.csd  pianoteq7_macos_test.csd  pianoteq8_macos_test.csd  pianoteq9_macos_test.csd  vst3-opcodes-minimal.csd  vst3-opcodes-test-macos.csd
patches/: vst3sdk.patch
vst3-opcodes/: CMakeLists.txt  README.md  version.h  vst3-opcodes.cpp
vst3-opcodes/cmake/: FindCsoundHomeFirst.cmake  notarize-macos-dist.bash  sign-macos-dist.bash
vst3-opcodes/cmake/Modules/: csound-config.cmake
